# pysquril

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yaml
docs/: examples.md  grammar.ebnf  grammar.html  queries.py
pysquril/: backends.py  exc.py  generator.py  interactive.py  parser.py  test_data.py  tests.py  utils.py
