[tool.poetry]
name = "pysquril"
version = "0.6.0"
description = "Python implementation of structured URI query language"
readme = "README.md"
repository = "https://github.com/unioslo/pysquril"
authors = [
    "Leon du Toit <l.c.d.toit@usit.uio.no>",
    "Eirik Haatveit <haatveit@uio.no>",
]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = ">=2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
termcolor = "^1.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
